# optical_black_box

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPTICAL_BLACKBOX_SPEC.md  OPTICAL_BLACKBOX_SPEC_FR.md  OPTICAL_BLACKBOX_SPEC_OLD.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
docs/: TESTING.md
src/optical_blackbox/: __init__.py  exceptions.py
testdata/Eyepieces/: Eyepieces.xlsx  UK565851-1.zmx.json  UK565851-2.zmx  UK565851-2.zmx.json  US01159233-2.zmx  US01159233-3.zmx  US01159233-4.zmx  US01366352-1.zmx  US01478704-1.zmx  US01478704-1.zmx.json  US01478704-2.zmx  US01478704-2.zmx.json  US01479229-1.zmx  US01479229-1.zmx.json  US01479229-3.zmx  US01479229-4.zmx  US01479229-4.zmx.json  US01759529-1.zmx  US01759529-2.zmx  US02206195-2.zmx  US02206195-2.zmx.json  US02217281-1.zmx  US02267832-1.zmx  US02267832-2.zmx  US02528468-1.zmx  US02549158-1.zmx  US02549158-2.zmx  US02549158-3.zmx  US02549158-3.zmx.json  US02549158-4.zmx  US02621564-1.zmx  US02621564-2.zmx  US02637245-1.zmx  US02637245-1.zmx.json  US02637245-3.zmx  US02637245-3.zmx.json  US02637245-4.zmx  US02637245-4.zmx.json  US02829560-1.zmx  US02829560-1.zmx.json  (+122 more)
testdata/Microscope objectives/: DE102017108595-1.zmx  DE102017108595-1.zmx.json  DE10316415-1.zmx  DE10316415-1.zmx.json  Imaging_Optics_Figure_11_40_US6504653.zmx  Imaging_Optics_Figure_11_40_US6504653.zmx.json  Imaging_Optics_Figure_11_40_optimised.zmx  Imaging_Optics_Figure_11_40_optimised.zmx.json  Imaging_Optics_Figure_7_59a.zmx  Imaging_Optics_Figure_7_59a.zmx.json  Imaging_Optics_Figure_7_59b.zmx  Imaging_Optics_Figure_7_59b.zmx.json  Imaging_Optics_Figure_7_62.zmx  Imaging_Optics_Figure_7_62.zmx.json  Imaging_Optics_Figure_7_64.zmx  Imaging_Optics_Figure_7_64.zmx.json  Imaging_Optics_Figure_7_67.zmx  Imaging_Optics_Figure_7_67.zmx.json  Imaging_Optics_Figure_7_68a.zmx  Imaging_Optics_Figure_7_68b.zmx  Imaging_Optics_Figure_7_68c.zmx  Imaging_Optics_Figure_7_68c.zmx.json  Imaging_Optics_Figure_7_70.zmx  Imaging_Optics_Figure_7_70.zmx.json  Imaging_Optics_Figure_7_73c.zmx  Imaging_Optics_Figure_7_73c.zmx.json  Imaging_Optics_Figure_7_75a.ZDA  Imaging_Optics_Figure_7_75a.zmx  Imaging_Optics_Figure_7_75b.zmx  Imaging_Optics_Figure_7_75b.zmx.json  JP1985-063512-1.zmx  JP1986-275811_1.zmx  JP1987-049313-1.zmx  JP1987-049313-2.zmx  (+159 more)
tests/: conftest.py  test_roundtrip.py
(+1835 files in other folders)
